# GhostCode

./: .geminiignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude-plugin/: marketplace.json
.claude/team-plan/: p15-connection-layer.md  p15-daemon-startup.md  t10-actor-lifecycle.md  t11-messaging-send.md  t12-inbox-read.md  t13-delivery-engine.md  t14-jsonrpc-server.md  t15-mcp-tools.md  t16-plugin-init.md  t17-daemon-lifecycle.md  t18-ipc-bridge.md  t19-integration-test.md  t20-build-package.md
.github/workflows/: ci.yml  e2e-matrix.yml  release.yml  scheduled.yml
.serena/: project.yml
config/: default.toml
crates/ghostcode-config/: Cargo.toml
crates/ghostcode-config/src/: layers.rs  lib.rs
crates/ghostcode-config/tests/: layering_test.rs
crates/ghostcode-daemon/: Cargo.toml
crates/ghostcode-daemon/src/: actor_mgmt.rs  cost.rs  dashboard.rs  diagnostics.rs  dispatch.rs  group.rs  hud.rs  lib.rs  lifecycle.rs  lock.rs  main.rs  paths.rs  process.rs  protocol.rs  recovery.rs  routing.rs  runner.rs  server.rs  session_gate.rs  skill_learning.rs  startup.rs  verification.rs
crates/ghostcode-daemon/src/messaging/: delivery.rs  inbox.rs  mod.rs  send.rs
crates/ghostcode-daemon/tests/: actor_test.rs  cost_dispatch_test.rs  cost_pbt_test.rs  cost_test.rs  dashboard_dispatch_test.rs  delivery_test.rs  dispatch_phase4_test.rs  dispatch_test.rs  doctor_test.rs  e2e_ipc_test.rs  group_test.rs  hud_pbt_test.rs  hud_snapshot_test.rs  inbox_test.rs  integration_test.rs  lifecycle_test.rs  lock_test.rs  main_startup_test.rs  phase3_integration_test.rs  phase4_integration_test.rs  process_recovery_test.rs  router_dispatch_test.rs  router_integration_test.rs  scaffold_test.rs  send_test.rs  server_test.rs  session_gate_test.rs  skill_learning_pbt_test.rs  skill_learning_test.rs  startup_race_test.rs  team_skill_list_test.rs  verification_dispatch_test.rs  verification_loop_test.rs  verification_pbt_test.rs  verification_state_test.rs
crates/ghostcode-daemon/tests/fixtures/: claude  claude-fail  codex
crates/ghostcode-ledger/: Cargo.toml
crates/ghostcode-ledger/src/: blob.rs  lib.rs  query.rs
crates/ghostcode-ledger/tests/: blob_test.rs  dashboard_query_pbt_test.proptest-regressions  dashboard_query_pbt_test.rs  dashboard_query_test.rs  ledger_test.rs
crates/ghostcode-mcp/: Cargo.toml
crates/ghostcode-mcp/proptest-regressions/: jsonrpc.txt
crates/ghostcode-mcp/src/: bootstrap.rs  jsonrpc.rs  lib.rs  main.rs  server.rs
crates/ghostcode-mcp/src/tools/: actor_list.rs  actor_start.rs  actor_stop.rs  dashboard_snapshot.rs  group_info.rs  group_list.rs  inbox_list.rs  inbox_mark_all_read.rs  inbox_mark_read.rs  message_send.rs  mod.rs  route_cancel.rs  route_status.rs  route_task.rs  session_gate_abort.rs  session_gate_close.rs  session_gate_open.rs  session_gate_submit.rs  skill_list.rs  team_skill_list.rs  verification_status.rs
crates/ghostcode-mcp/tests/: e2e_stdio_test.rs  mcp_binary_test.rs  tool_registry_test.rs
crates/ghostcode-router/: Cargo.toml
crates/ghostcode-router/src/: backend.rs  dag.rs  executor.rs  lib.rs  process.rs  rolefile.rs  runtime_probe.rs  session.rs  sovereignty.rs  stream.rs  task_format.rs
crates/ghostcode-router/tests/: backend_test.rs  dag_test.rs  executor_test.rs  process_test.rs  rolefile_test.proptest-regressions  rolefile_test.rs  runtime_probe_test.rs  session_test.proptest-regressions  session_test.rs  sovereignty_enforcement_test.rs  sovereignty_test.rs  stream_test.proptest-regressions  stream_test.rs  task_format_test.rs
crates/ghostcode-types/: Cargo.toml
crates/ghostcode-types/src/: actor.rs  addr.rs  dashboard.rs  event.rs  group.rs  ipc.rs  lib.rs  skill.rs  testutil.rs
crates/ghostcode-types/tests/: types_test.rs
crates/ghostcode-web/: Cargo.toml
crates/ghostcode-web/src/: dto.rs  handlers.rs  ipc.rs  lib.rs  main.rs  server.rs  sse.rs  state.rs
crates/ghostcode-web/tests/: cors_test.rs  e2e_test.rs  http_test.rs  main_cli_test.rs  shutdown_test.rs  sse_test.rs
crates/ghostcode-wrapper/: Cargo.toml
crates/ghostcode-wrapper/src/: ledger.rs  main.rs
docs/: architecture.md  getting-started.md  operations.md  phase1-tasks.md  phase2-tasks.md  ref-comm-kernel.md  ref-model-router.md  ref-ralph-engine.md  references.md  research.md
schemas/: daemon-request.json  daemon-response.json
scripts/: build-binaries.sh  build-release-assets.sh  pack-plugin.sh  release-checksums.sh
scripts/tests/: release-assets-contract.sh
src/dashboard/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/dashboard/src/: App.tsx  index.css  main.tsx
src/dashboard/src/__tests__/: Timeline.test.tsx  setup.ts  useSSE.test.ts
src/dashboard/src/api/: client.ts
src/dashboard/src/components/: ActiveRoutesPanel.tsx  AgentGraph.tsx  SkillPanel.tsx  Timeline.tsx
src/dashboard/src/hooks/: useDashboard.ts  useSSE.ts
src/plugin/: .mcp.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
src/plugin/.claude/: settings.json
src/plugin/.claude-plugin/: plugin.json
src/plugin/commands/: execute.md  plan.md  research.md  review.md  spec-impl.md  spec-plan.md  spec-research.md  team-exec.md  team-plan.md  team-research.md  team-review.md
src/plugin/hooks/: hooks.json
src/plugin/prompts/: codex-analyzer.md  codex-reviewer.md  gemini-analyzer.md  gemini-reviewer.md
src/plugin/scripts/: hook-pre-compact.mjs  hook-pre-tool-use.mjs  hook-session-end.mjs  hook-session-start.mjs  hook-stop.mjs  hook-subagent-start.mjs  hook-subagent-stop.mjs  hook-user-prompt-submit.mjs  install-wrapper.mjs  run.mjs
src/plugin/scripts/lib/: daemon-client.mjs  stdin.mjs
src/plugin/skills/execute/: SKILL.md
src/plugin/skills/plan/: SKILL.md
src/plugin/skills/research/: SKILL.md
src/plugin/skills/review/: SKILL.md
src/plugin/src/: cli.ts  daemon.ts  index.ts  install.test.ts  install.ts  ipc.test.ts  ipc.ts  postinstall.ts  session-lease.ts  web.ts
src/plugin/src/cli/: doctor.ts  (+2 more)
(+92 files in other folders)
